--- a/app/globals.css
+++ b/app/globals.css
@@ -82,7 +82,7 @@ font-size: 24px;
   max-width: 1000px; /* Ancho máximo */
   margin-bottom: 20px; /* Separación del resto del contenido */
   font-family: Arial, sans-serif; /* Fuente limpia */
-  position: center;
+  height: 500px;
   
 }
 /* ----------------------------List------------------------------------------------------------------ */
